--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+
       - name: Go mod tidy checker
         id: gomodtidy
         uses: ./.github/actions/gomodtidy
